Add station info endpoint for staff and admin users
Introduce GET /station/me endpoint to retrieve current staff's station
details along with associated vehicles. Requires STAFF or ADMIN role.
Includes vehicle status in response and proper error handling.